[gd_scene load_steps=12 format=3 uid="uid://byy8027e326wd"]

[ext_resource type="Texture2D" uid="uid://b7soluh72vjfa" path="res://root/assets/image/game/animal/png/round/panda.png" id="1_3e4ed"]
[ext_resource type="Texture2D" uid="uid://c1bd0fcvhdp" path="res://root/assets/image/game/animal/png/round_outline/panda.png" id="2_hxejm"]
[ext_resource type="Script" uid="uid://c0l7uq316e250" path="res://root/scenes/scene/game_scene/game_content/game_button/game_button.gd" id="3_3q41s"]
[ext_resource type="PackedScene" uid="uid://b4b36g3uhwemg" path="res://root/scenes/component/audio/button_audio/button_audio.tscn" id="3_4ltph"]
[ext_resource type="PackedScene" uid="uid://bpci1qpmsjkbg" path="res://root/scenes/scene/game_scene/game_content/game_button/click_counter/click_counter.tscn" id="4_4d018"]
[ext_resource type="PackedScene" uid="uid://vlsdtpdj5gw0" path="res://root/scenes/node/game/spawner_buffer/spawner_buffer.tscn" id="6_1vbam"]
[ext_resource type="PackedScene" uid="uid://crvdmtowmw2sc" path="res://root/scenes/component/emitter/particle_emitter/label_particle_emitter/label_particle_emitter.tscn" id="7_72cr5"]
[ext_resource type="PackedScene" uid="uid://bsp81vca8h8r" path="res://root/scenes/node/game/label_particle_tween/label_particle_tween.tscn" id="8_2bglp"]

[sub_resource type="Animation" id="Animation_77dwp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:pivot_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_83ivt"]
resource_name = "float"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-0.174533, 0.0, 0.174533, 0.0, -0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:pivot_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(125, 125), Vector2(62.5, 62.5), Vector2(125, 125), Vector2(62.5, 62.5), Vector2(125, 125)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fhghp"]
_data = {
&"RESET": SubResource("Animation_77dwp"),
&"float": SubResource("Animation_83ivt")
}

[node name="GameButton" type="TextureButton"]
custom_minimum_size = Vector2(250, 215)
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../../MarginContainer1/MenuButton")
focus_neighbor_top = NodePath("../../MarginContainer2/MenuButton")
focus_neighbor_right = NodePath("../../MarginContainer2/MenuButton")
focus_neighbor_bottom = NodePath("../../MarginContainer1/MenuButton")
button_mask = 3
texture_normal = ExtResource("1_3e4ed")
texture_focused = ExtResource("2_hxejm")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_3q41s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_fhghp")
}
autoplay = "float"

[node name="ButtonAudio" parent="." instance=ExtResource("3_4ltph")]
focus = 3
down = 4
up = 4

[node name="ClickCounter" parent="." instance=ExtResource("4_4d018")]
unique_name_in_owner = true

[node name="Particles" type="Node" parent="."]

[node name="EmitterSpawnerBuffer" parent="Particles" node_paths=PackedStringArray("entity_parent") instance=ExtResource("6_1vbam")]
unique_name_in_owner = true
entity_pck = ExtResource("7_72cr5")
entity_buffer_callable = "buffer"
entity_flush_callable = "flush"
entity_finished_signal = "particle_stopped"
entity_parent = NodePath("EmitterSpawnerEntityParent")
max_count = 50

[node name="EmitterSpawnerEntityParent" type="Node2D" parent="Particles/EmitterSpawnerBuffer"]
unique_name_in_owner = true

[node name="TweenSpawnerBuffer" parent="Particles" node_paths=PackedStringArray("entity_parent") instance=ExtResource("6_1vbam")]
unique_name_in_owner = true
entity_pck = ExtResource("8_2bglp")
entity_buffer_callable = "buffer"
entity_flush_callable = "flush"
entity_finished_signal = "finished"
entity_parent = NodePath("TweenSpawnerEntityParent")
max_count = 50

[node name="TweenSpawnerEntityParent" type="Node2D" parent="Particles/TweenSpawnerBuffer"]
unique_name_in_owner = true
